--- a/myCSS.css
+++ b/myCSS.css
@@ -4,8 +4,8 @@ body {
 	font-family: Georgia, "Times New Roman", Times, serif;
 	font-size: 14px;
 	color: rgb(50,80,100);		
-	background-color: powderblue;
-	/*margin: 0 0 0 0; top right bottom left*/	
+	background-color: #f3f3f1;
+	/*margin: 0 0 0 0; top right bottom left*/
 }
 
 p {
